--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -592,6 +592,7 @@
                 <text x="210" y="170" text-anchor="middle" fill="currentColor" font-size="12">80%</text>
                 <text x="270" y="170" text-anchor="middle" fill="currentColor" font-size="12">100%</text>
               </svg>
+              <div class="risk-meter-needle" id="riskMeterNeedle" style="transform: translateX(-50%) rotate(14.58deg);"></div>
             </div>
             <div class="risk-gauge-value" id="riskGaugeValue">27.1%</div>
             <div class="risk-level low" id="riskLevel">Low Risk</div>
