--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -189,6 +189,19 @@
       gap: var(--spacing-xl);
     }
 
+    .risk-meter-needle {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        width: 4px;
+        height: 110px;
+        background-color: var(--color-text);
+        transform-origin: bottom center;
+        transform: translateX(-50%) rotate(-90deg);
+        transition: transform 1s cubic-bezier(0.34, 1.56, 0.64, 1);
+        z-index: 10;
+    }
+
     @media (min-width: 768px) {
       .content {
         grid-template-columns: 1fr 1fr;
