--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -594,6 +594,7 @@
                 <text x="150" y="170" text-anchor="middle" fill="currentColor" font-size="12">50%</text>
                 <text x="210" y="170" text-anchor="middle" fill="currentColor" font-size="12">80%</text>
                 <text x="270" y="170" text-anchor="middle" fill="currentColor" font-size="12">100%</text>
+                <circle cx="150" cy="150" r="12" fill="#1f2937" />
               </svg>
               <div class="risk-meter-needle" id="riskMeterNeedle"></div>
               <div class="risk-meter-center"></div>
