--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Evaluación de Riesgos Familiares</title>
+  <title> Evaluación de Riesgos Familiares</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -546,37 +546,37 @@
     .pulse {
       animation: pulse 2s infinite;
     }
-    </style>
-  </head>
-  <body>
-    <div class="theme-toggle"></div>
+  </style>
+</head>
+<body>
+  <div class="theme-toggle">
     <input type="checkbox" id="theme-switch" class="theme-switch">
     <label for="theme-switch" class="theme-switch-label">
       <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"></circle><line x1="12" y1="1" x2="12" y2="3"></line><line x1="12" y1="21" x2="12" y2="23"></line><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line><line x1="1" y1="12" x2="3" y2="12"></line><line x1="21" y1="12" x2="23" y2="12"></line><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line></svg>
       <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
     </label>
-    </div>
+  </div>
 
-    <div class="app-container">
+  <div class="app-container">
     <header class="app-header">
-      <h1>Evaluación de Riesgo Familiar</h1>
-      <p class="subtitle">Evalúa y visualiza los factores de riesgo familiar</p>
+      <h1>Family Risk Assessment</h1>
+      <p class="subtitle">Evaluate and visualize family risk factors</p>
     </header>
 
     <main class="content">
       <section class="risk-summary-section">
-      <div class="card risk-summary">
-        <div class="card-header">
-        <h2>Índice de Riesgo Familiar</h2>
-        <button id="generateBtn" class="btn btn-primary">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"></path><path d="M21 3v5h-5"></path><path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"></path><path d="M3 21v-5h5"></path></svg>
-          Generar Datos
-        </button>
-        </div>
-        
-        <div class="risk-gauge-container">
-        <div class="risk-gauge">
-          <svg class="risk-gauge-svg" width="300" height="170" viewBox="0 0 300 170"></svg>
+        <div class="card risk-summary">
+          <div class="card-header">
+            <h2>Family Risk Index</h2>
+            <button id="generateBtn" class="btn btn-primary">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"></path><path d="M21 3v5h-5"></path><path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"></path><path d="M3 21v-5h5"></path></svg>
+              Generate Data
+            </button>
+          </div>
+          
+          <div class="risk-gauge-container">
+            <div class="risk-gauge">
+              <svg class="risk-gauge-svg" width="300" height="170" viewBox="0 0 300 170">
                 <!-- Background track (light gray) -->
                 <path class="risk-gauge-arc" d="M 30 150 A 120 120 0 0 1 270 150" stroke="#e5e7eb" />
                 <!-- Low risk segment (green, 0-40%) -->
