--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -559,8 +559,8 @@
 
   <div class="app-container">
     <header class="app-header">
-      <h1>Family Risk Assessment</h1>
-      <p class="subtitle">Evaluate and visualize family risk factors</p>
+      <h1>Evaluación de Riesgos Familiares</h1>
+      <p class="subtitle">Evaluar y Visualizar Factores de Riesgos Familiares</p>
     </header>
 
     <main class="content">
