--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -795,13 +795,13 @@
       riskLevel.classList.remove('low', 'medium', 'high');
       
       if (totalRisk >= 71) {
-        riskLevelText = "High Risk";
+        riskLevelText = "High Riesgo";
         riskLevel.classList.add('high');
       } else if (totalRisk >= 41) {
-        riskLevelText = "Medium Risk";
+        riskLevelText = "Medium Riesgo";
         riskLevel.classList.add('medium');
       } else {
-        riskLevelText = "Low Risk";
+        riskLevelText = "Low Riesgo";
         riskLevel.classList.add('low');
       }
       
