--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -795,13 +795,13 @@
       riskLevel.classList.remove('low', 'medium', 'high');
       
       if (totalRisk >= 71) {
-        riskLevelText = "High Riesgo";
+        riskLevelText = "Riesgo Alto";
         riskLevel.classList.add('high');
       } else if (totalRisk >= 41) {
-        riskLevelText = "Medium Riesgo";
+        riskLevelText = "Riesgo Medio";
         riskLevel.classList.add('medium');
       } else {
-        riskLevelText = "Low Riesgo";
+        riskLevelText = "Riesgo Bajo";
         riskLevel.classList.add('low');
       }
       
