--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -840,7 +840,7 @@
           </div>
           <div class="risk-factor-details">
             <span>${factor.description}</span>
-            <span>Contribution: ${(factor.value * factor.weight).toFixed(1)}%</span>
+            <span>Contribución: ${(factor.value * factor.weight).toFixed(1)}%</span>
           </div>
         `;
         
