--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -630,7 +630,7 @@
             </div>
             </section>
 
-            <section class="risk-factors-section">
+            <section class="risk-factors-section" style="width: 385px;">
             <div class="card">
               <div class="card-header">
               <h2>Factores de Riesgo</h2>
