--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -567,7 +567,7 @@
       <section class="risk-summary-section">
         <div class="card risk-summary">
           <div class="card-header">
-            <h2>Indice de Riesgio Familiar</h2>
+            <h2>Índice de Riesgo Familiar</h2>
             <button id="generateBtn" class="btn btn-primary">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"></path><path d="M21 3v5h-5"></path><path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"></path><path d="M3 21v-5h5"></path></svg>
               Generar Datos
@@ -630,7 +630,7 @@
             </div>
             </section>
 
-            <section class="risk-factors-section" style="width: 385px;">
+            <section class="risk-factors-section" style="width: 385px;"></section></section></section>
             <div class="card">
               <div class="card-header">
               <h2>Factores de Riesgo</h2>
@@ -646,7 +646,7 @@
             </div>
             </section>
 
-            <section class="risk-chart-section">
+            <section class="risk-chart-section" style="width: 44.875rem;"></section>
             <div class="card">
               <div class="card-header">
               <h2>Visualización de Riesgos</h2>
