--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -646,7 +646,7 @@
             </div>
             </section>
 
-            <section class="risk-chart-section" style="width: 44.875rem;"></section>
+            <section class="risk-chart-section" style="width: 718px;">
             <div class="card">
               <div class="card-header">
               <h2>Visualización de Riesgos</h2>
