--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -877,14 +877,14 @@
     function getRiskClass(value) {
       if (value >= 71) return 'high';
       if (value >= 41) return 'medium';
-      return 'low';
+      return 'Bajo';
     }
 
     // Get risk level text based on value
     function getRiskLevelText(value) {
       if (value >= 71) return 'High';
       if (value >= 41) return 'Medium';
-      return 'Low';
+      return 'Bajo';
     }
 
     // Initialize Chart.js chart
