--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -882,9 +882,9 @@
 
     // Get risk level text based on value
     function getRiskLevelText(value) {
-      if (value >= 71) return 'High';
-      if (value >= 41) return 'Medium';
-      return 'Low';
+      if (value >= 71) return 'Alto';
+      if (value >= 41) return 'Medio';
+      return 'Bajo';
     }
 
     // Initialize Chart.js chart
