--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -583,6 +583,22 @@
     </header>
 
     <main class="content">
+      <section class="personal-info-section">
+        <div class="card">
+          <div class="card-header">
+            <h2>Información Personal</h2>
+          </div>
+          <div class="card-body">
+            <p><strong>Documento:</strong> <span id="documentInfo">-</span></p>
+            <p><strong>Sexo:</strong> <span id="sexInfo">-</span></p>
+            <p><strong>Género:</strong> <span id="genderInfo">-</span></p>
+            <p><strong>Nacionalidad:</strong> <span id="nationalityInfo">-</span></p>
+            <p><strong>Fecha de Nacimiento:</strong> <span id="birthDateInfo">-</span></p>
+            <p><strong>Edad:</strong> <span id="ageInfo">-</span></p>
+          </div>
+        </div>
+      </section>
+
       <section class="risk-summary-section">
         <div class="card risk-summary">
           <div class="card-header">
