--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -594,6 +594,7 @@
             <p><strong>Género:</strong> <span id="genderInfo">-</span></p>
             <p><strong>Nacionalidad:</strong> <span id="nationalityInfo">-</span></p>
             <p><strong>Fecha de Nacimiento:</strong> <span id="birthDateInfo">-</span></p>
+            <p><strong>Curso de Vida:</strong> <span id="lifestageInfo">-</span></p>
             <p><strong>Edad:</strong> <span id="ageInfo">-</span></p>
           </div>
         </div>
