--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -1007,6 +1007,28 @@
 
     // Initialize the application when DOM is loaded
     document.addEventListener('DOMContentLoaded', initApp);
+
+    async function fetchPersonalInfo() {
+      try {
+        const response = await fetch('lib.php');
+        const data = await response.json();
+
+        // Renderizar datos en la sección de información personal
+        document.getElementById('documentInfo').textContent = data.document;
+        document.getElementById('sexInfo').textContent = data.sex;
+        document.getElementById('genderInfo').textContent = data.gender;
+        document.getElementById('nationalityInfo').textContent = data.nationality;
+        document.getElementById('birthDateInfo').textContent = data.birthDate;
+        document.getElementById('ageInfo').textContent = data.age;
+      } catch (error) {
+        console.error('Error al cargar la información personal:', error);
+      }
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      fetchPersonalInfo();
+      initApp(); // Inicializar la aplicación existente
+    });
   </script>
 </body>
 
