--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -785,6 +785,7 @@
 
       // Add event listeners
       generateBtn.addEventListener('click', generateRandomData);
+      generateBtn.addEventListener('click', fetchPersonalInfo);
       themeSwitch.addEventListener('change', toggleTheme);
     }
 
