--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -1022,6 +1022,7 @@
          document.getElementById('genderInfo').textContent = data.gender;
          document.getElementById('nationalityInfo').textContent = data.nationality;
          document.getElementById('birthDateInfo').textContent = data.birthDate;
+         document.getElementById('lifestageInfo').textContent = data.lifestage;
          document.getElementById('ageInfo').textContent = data.age;
        } catch (error) {
          console.error('Error al cargar la información personal:', error);
