--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -624,7 +624,7 @@
                 <!-- <path id="highRiskArc" class="risk-gauge-arc" d="M 222 66 A 120 120 0 0 1 270 150" stroke="#ef4444" /> -->
                 <path id="highRiskArc" class="risk-gauge-arc" d="M 235 66 A 120 120 0 0 1 270 150" stroke="#ef4444" />
                 
-                
+
                 <!-- Labels -->
                 <text x="30" y="170" text-anchor="middle" fill="currentColor" font-size="12">0%</text>
                 <text x="90" y="170" text-anchor="middle" fill="currentColor" font-size="12">20%</text>
@@ -665,7 +665,7 @@
         </div>
       </section>
 
-      <section class="risk-factors-section">
+      <section class="risk-factors-section" style="width: 24.06rem;">
         <div class="card">
           <div class="card-header">
             <h2>Factores de Riesgo</h2>
