--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -681,7 +681,7 @@
         </div>
       </section>
 
-      <section class="risk-chart-section">
+      <section class="risk-chart-section" style="width: 44.875rem;">
         <div class="card">
           <div class="card-header">
             <h2>Visualización de Riesgos</h2>
