--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -597,6 +597,18 @@
       </section>
 
       <section class="risk-summary-section">
+        <div class="card">
+          <div class="card-header">
+            <h2>Resumen de Riesgo Familiar</h2>
+          </div>
+          <div class="card-body">
+            <p>Esta herramienta evalúa los factores de riesgo familiar y proporciona un índice de riesgo general.</p>
+            <p>Utiliza la información personal para generar un perfil de riesgo y visualizar los resultados.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="risk-summary-section">
         <div class="card risk-summary">
           <div class="card-header">
             <h2>Índice de Riesgo Familiar</h2>
