--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -595,25 +595,24 @@
           </div>
         </div>
       </section>
-      <section class="personal-info-section">
+
+      <section class="search-info-risk">
         <div class="card">
           <div class="card-header">
-            <h2>Información Personal</h2>
+        <h2>Búsqueda de Usuario</h2>
           </div>
           <div class="card-body">
-            <p><strong>Documento:</strong> <span id="documentInfo">-</span></p>
-            <p><strong>Sexo:</strong> <span id="sexInfo">-</span></p>
-            <p><strong>Género:</strong> <span id="genderInfo">-</span></p>
-            <p><strong>Nacionalidad:</strong> <span id="nationalityInfo">-</span></p>
-            <p><strong>Fecha de Nacimiento:</strong> <span id="birthDateInfo">-</span></p>
-            <p><strong>Curso de Vida:</strong> <span id="lifestageInfo">-</span></p>
-            <p><strong>Edad:</strong> <span id="ageInfo">-</span></p>
+        <p>Ingrese el número de documento para buscar información del usuario.</p>
+        <div class="input-group">
+          <input type="number" id="searchInput" class="form-control" placeholder="Número de Documento">
+          <button id="generateBtn" class="btn btn-primary">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+            Buscar usuario
+          </button>
+        </div>
           </div>
         </div>
       </section>
-
-
-
 
       <section class="risk-summary-section">
         <div class="card">
@@ -633,10 +632,7 @@
         <div class="card risk-summary">
           <div class="card-header">
             <h2>Índice de Riesgo Familiar</h2>
-            <button id="generateBtn" class="btn btn-primary">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"></path><path d="M21 3v5h-5"></path><path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"></path><path d="M3 21v-5h5"></path></svg>
-              Generar Datos
-            </button>
+            
           </div>
           
           <div class="risk-gauge-container">
