--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -614,7 +614,25 @@
         </div>
       </section>
 
-      <section class="risk-summary-section">
+      <section class="search-info-risk">
+        <div class="card">
+          <div class="card-header">
+        <h2>Búsqueda de Usuario</h2>
+          </div>
+          <div class="card-body">
+        <p>Ingrese el número de documento para buscar información del usuario.</p>
+        <div class="input-group">
+          <input type="number" id="searchInput" class="form-control" placeholder="Número de Documento">
+          <button id="generateBtn" class="btn btn-primary">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+            Buscar usuario
+          </button>
+        </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- <section class="risk-summary-section">
         <div class="card">
           <div class="card-header">
             <h2>Resumen de Riesgo Familiar</h2>
@@ -624,7 +642,7 @@
             <p>Utiliza la información personal para generar un perfil de riesgo y visualizar los resultados.</p>
           </div>
         </div>
-      </section>
+      </section> -->
 
 
 
