--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -610,19 +610,15 @@
             <p><strong>Fecha de Nacimiento:</strong> <span id="birthDateInfo">-</span></p>
             <p><strong>Curso de Vida:</strong> <span id="lifestageInfo">-</span></p>
             <p><strong>Edad:</strong> <span id="ageInfo">-</span></p>
+            <p><strong>Localidad:</strong> <span id="locationInfo">-</span></p>
+            <p><strong>Upz:</strong> <span id="upzInfo">-</span></p>
+            <p><strong>Dirección:</strong> <span id="addressInfo">-</span></p>
+            <p><strong>Teléfono:</strong> <span id="phoneInfo">-</span></p>
           </div>
         </div>
       </section>
-      <section class="risk-summary-section">
-        <div class="card">
-          <div class="card-header">
-            <h2>Resumen de Riesgo Familiar</h2>
-          </div>
-          <div class="card-body">
-            <p>Esta herramienta evalúa los factores de riesgo familiar y proporciona un índice de riesgo general.</p>
-            <p>Utiliza la información personal para generar un perfil de riesgo y visualizar los resultados.</p>
-          </div>
-        </div>
+      
+      
 
       <!-- <section class="risk-summary-section">
         <div class="card">
