--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -600,20 +600,24 @@
       <section class="personal-info-section">
         <div class="card">
           <div class="card-header">
-            <h2>Información Personal</h2>
+        <h2>Información Personal</h2>
           </div>
-          <div class="card-body">
-            <p><strong>Documento:</strong> <span id="documentInfo">-</span></p>
-            <p><strong>Sexo:</strong> <span id="sexInfo">-</span></p>
-            <p><strong>Género:</strong> <span id="genderInfo">-</span></p>
-            <p><strong>Nacionalidad:</strong> <span id="nationalityInfo">-</span></p>
-            <p><strong>Fecha de Nacimiento:</strong> <span id="birthDateInfo">-</span></p>
-            <p><strong>Curso de Vida:</strong> <span id="lifestageInfo">-</span></p>
-            <p><strong>Edad:</strong> <span id="ageInfo">-</span></p>
-            <p><strong>Localidad:</strong> <span id="locationInfo">-</span></p>
-            <p><strong>Upz:</strong> <span id="upzInfo">-</span></p>
-            <p><strong>Dirección:</strong> <span id="addressInfo">-</span></p>
-            <p><strong>Teléfono:</strong> <span id="phoneInfo">-</span></p>
+          <div class="card-body" style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px;">
+        <div>
+          <p><strong>Documento:</strong> <span id="documentInfo">-</span></p>
+          <p><strong>Sexo:</strong> <span id="sexInfo">-</span></p>
+          <p><strong>Género:</strong> <span id="genderInfo">-</span></p>
+          <p><strong>Nacionalidad:</strong> <span id="nationalityInfo">-</span></p>
+          <p><strong>Fecha de Nacimiento:</strong> <span id="birthDateInfo">-</span></p>
+        </div>
+        <div>
+          <p><strong>Curso de Vida:</strong> <span id="lifestageInfo">-</span></p>
+          <p><strong>Edad:</strong> <span id="ageInfo">-</span></p>
+          <p><strong>Localidad:</strong> <span id="locationInfo">-</span></p>
+          <p><strong>Upz:</strong> <span id="upzInfo">-</span></p>
+          <p><strong>Dirección:</strong> <span id="addressInfo">-</span></p>
+          <p><strong>Teléfono:</strong> <span id="phoneInfo">-</span></p>
+        </div>
           </div>
         </div>
       </section>
