--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -561,6 +561,34 @@
     .pulse {
       animation: pulse 2s infinite;
     }
+
+    /* Input Styles */
+    .input-group {
+      display: flex;
+      width: 100%;
+      margin-bottom: var(--spacing-md);
+    }
+
+    .form-control {
+      flex: 1;
+      padding: var(--spacing-sm) var(--spacing-md);
+      font-size: var(--font-size-md);
+      border: 1px solid var(--color-border);
+      border-radius: var(--radius-md);
+      background-color: var(--color-surface);
+      color: var(--color-text);
+      transition: border-color var(--transition-normal), box-shadow var(--transition-normal);
+    }
+
+    .form-control:focus {
+      outline: none;
+      border-color: var(--color-primary);
+      box-shadow: 0 0 0 2px var(--color-primary-light);
+    }
+
+    .btn {
+      margin-left: var(--spacing-sm);
+    }
   </style>
 </head>
 <body>
