--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -612,17 +612,16 @@
           <div class="card-header">
         <h2>Búsqueda de Usuario</h2>
           </div>
-            <div class="card-body">
-            <p>Ingrese el número de documento para buscar información del usuario.</p>
-            <br>
-            <div class="input-group"></div>
-            <input type="number" id="searchInput" class="form-control" placeholder="Número de Documento">
-            <button id="generateBtn" class="btn btn-primary">
+          <div class="card-body">
+        <p>Ingrese el número de documento para buscar información del usuario.</p>
+        <div class="input-group">
+          <input type="number" id="searchInput" class="form-control" placeholder="Número de Documento">
+          <button id="generateBtn" class="btn btn-primary">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
             Buscar usuario
-            </button>
+          </button>
+        </div>
           </div>
-            </div>
         </div>
       </section>
 
