--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -613,7 +613,7 @@
         <h2>Búsqueda de Usuario</h2>
           </div>
           <div class="card-body">
-        <p>Ingrese el número de documento para buscar información del usuario.</p>
+        <p>Ingrese el número de documento para buscar información del usuario.</p><br>
         <div class="input-group">
           <input type="number" id="searchInput" class="form-control" placeholder="Número de Documento">
           <button id="generateBtn" class="btn btn-primary">
