--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -583,7 +583,7 @@
     </header>
 
     <main class="content">
-      <section class="personal-info-section">
+<!--       <section class="personal-info-section">
         <div class="card">
           <div class="card-header">
             <h2>Información Personal</h2>
@@ -598,7 +598,7 @@
             <p><strong>Edad:</strong> <span id="ageInfo">-</span></p>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="risk-summary-section">
         <div class="card risk-summary">
