--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -773,19 +773,19 @@
       socioeconomic: { 
         name: "Nivel Socioeconómico", 
         value: 30, 
-        weight: 0.20,
+        weight: 0.18,
         description: "Impacta directamente el acceso a bienes y servicios esenciales."
       },
       familyStructure: { 
         name: "Estructura Familiar", 
         value: 25, 
-        weight: 0.15,
+        weight: 0.20,
         description: "Influye en el apoyo social, la funcionalidad y la estabilidad del hogar."
       },
       socialVulnerability: { 
         name: "Vulnerabilidad Social", 
         value: 20, 
-        weight: 0.15,
+        weight: 0.12,
         description: "Considera factores como la violencia, el desplazamiento y la exclusión social."
       },
       accessToHealth: { 
@@ -795,7 +795,7 @@
         description: "Clave para la prevención y el cuidado de enfermedades."
       },
       livingEnvironment: { 
-        name: "Entorno de Vida", 
+        name: "Entorno Habitacional", 
         value: 40, 
         weight: 0.10,
         description: "Evalúa las condiciones de la vivienda y su impacto en la salud."
@@ -803,7 +803,7 @@
       demographics: { 
         name: "Características Demográficas", 
         value: 25, 
-        weight: 0.10,
+        weight: 0.30,
         description: "Incluye edad, género y otras variables que influyen en la exposición al riesgo."
       }
     };
