--- a/riskFam/3/index.html
+++ b/riskFam/3/index.html
@@ -769,7 +769,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     // Initial data
-    let factors = {
+/*     let factors = {
       socioeconomic: { 
         name: "Nivel Socioeconómico", 
         value: 30, 
@@ -807,7 +807,7 @@
         description: "Incluye edad, género y otras variables que influyen en la exposición al riesgo."
       }
     };
-
+ */
     // DOM elements
     const generateBtn = document.getElementById('generateBtn');
     const riskMeterNeedle = document.getElementById('riskMeterNeedle');
