--- a/riskFam/3/index0.html
+++ b/riskFam/3/index0.html
@@ -930,10 +930,10 @@ function updatePersonalInfo(data) {
     birthDateInfo: data.birthDate,
     lifestageInfo: data.lifestage,
     ageInfo: data.age,
-    locationInfo: data.location || '-',
-    upzInfo: data.upz || '-',
-    addressInfo: data.address || '-',
-    phoneInfo: data.phone || '-'
+    locationInfo: data.location,
+    upzInfo: data.upz,
+    addressInfo: data.address,
+    phoneInfo: data.phone
   };
   for (const [id, value] of Object.entries(fields)) {
     const element = document.getElementById(id);
